# url-markdown

./: .gitignore  Makefile  build.py  main.py  pyproject.toml  requirements.txt
assets/: icon.icns
src/: config.py
src/interfaces/: converter.py  scraper.py  storage.py  user_agent.py
src/services/: file_storage.py  html_converter.py  logger.py  user_agent.py  web_scraper.py
src/ui/: main_window.py
src/ui/widgets/: action_buttons.py  html_preview.py  logger_widget.py  markdown_display.py  markdown_highlighter.py  url_input.py
